SERVER-15165 Don't error out when passed 0 len to writtingPtr